# 2D-Shape-Create

./: CMakeLists.txt  README.md  build.bat
apps/: CMakeLists.txt
apps/src/: application.cpp  application.h  main.cpp
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
core/: CMakeLists.txt
core/include/core/: plane2D.h  shapecreate2d.h  shapecreate2d_utilities.h  utilities.h
core/src/: plane2D.cpp  shapecreate2d.cpp
